--- a/trunk/ delphi-xe-factu/DELPHI_XE/FACTURACION/ProyectoFacturacionXE.dproj
+++ b/trunk/ delphi-xe-factu/DELPHI_XE/FACTURACION/ProyectoFacturacionXE.dproj
@@ -79,6 +79,9 @@
 			<DCCReference Include="frmCiudad.pas">
 				<Form>frmCiudad2</Form>
 			</DCCReference>
+			<DCCReference Include="frmProveedores.pas">
+				<Form>frmProveedoresUt</Form>
+			</DCCReference>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
