--- a/trunk/ delphi-xe-factu/DELPHI_XE/FACTURACION/Debug/Win32/ServerXE.ini
+++ b/trunk/ delphi-xe-factu/DELPHI_XE/FACTURACION/Debug/Win32/ServerXE.ini
@@ -1,3 +1,3 @@
 [Configuración]
-BD=localhost:C:\PROYECTO_PATRIA\BD\FACTURACION.FDB
+BD=localhost:C:\Users\claudio.brignardello\firebird\ delphi-xe-factu\FACTURACION.FDB
 
