--- a/trunk/ delphi-xe-factu/FacturacionXE-MDI/ProyectoXE.dproj
+++ b/trunk/ delphi-xe-factu/FacturacionXE-MDI/ProyectoXE.dproj
@@ -73,6 +73,12 @@
 			<DCCReference Include="frmLogin.pas">
 				<Form>FLogin</Form>
 			</DCCReference>
+			<DCCReference Include="frmBaseAll.pas">
+				<Form>Form1</Form>
+			</DCCReference>
+			<DCCReference Include="frmProveedorUt.pas">
+				<Form>frmProveedor</Form>
+			</DCCReference>
 			<BuildConfiguration Include="Debug">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
