Modificacion el el archivo de inicio

--- a/ delphi-xe-factu/FacturacionXE-MDI/ServerXE.ini
+++ b/ delphi-xe-factu/FacturacionXE-MDI/ServerXE.ini
@@ -1,3 +1,5 @@
 [Configuración]
-BD=localhost:C:\FACTURACIONXE\delphi-xe-factu\FACTURACION.FDB
+BD=localhost:C:\FACTURACIONXE\ delphi-xe-factu\FACTURACION.FDB
 
+USER=
+PASS=
