--- a/trunk/ delphi-xe-factu/SisGym/SYSGYM/Debug/Win32/SisGym.ini
+++ b/trunk/ delphi-xe-factu/SisGym/SYSGYM/Debug/Win32/SisGym.ini
@@ -1,2 +1,2 @@
 [Configuración]
-BD=LOCALHOST/3052:C:\FACTURACIONXE\SisGym\SYSGYM\BD\SisGym.fdb
+BD=LOCALHOST/3052:C:\FACTURACIONXE\ delphi-xe-factu\SisGym\SYSGYM\BD\SisGym.fdb
