--- a/ delphi-xe-factu/SisGym/SYSGYM/ProyectoSysGym.dproj
+++ b/ delphi-xe-factu/SisGym/SYSGYM/ProyectoSysGym.dproj
@@ -73,6 +73,9 @@
 			<DCCReference Include="frmSociosUt.pas">
 				<Form>frmSocios</Form>
 			</DCCReference>
+			<DCCReference Include="frmPersonaUt.pas">
+				<Form>frmPersona</Form>
+			</DCCReference>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
